Making this pretty prematurely

--- a/src/IngameView.css
+++ b/src/IngameView.css
@@ -19,6 +19,15 @@
   font-size: 20px;
 }
 
+.IngameView-Countdown {
+  padding: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 60px;
+}
+
 .IngameView-Letter-Untyped {
   color: white;
   font-size: 40px;
