added basic victory animation

--- a/src/IngameView.css
+++ b/src/IngameView.css
@@ -1,3 +1,11 @@
+.IngameView-Container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .IngameView-Stat {
   width: inherit;
   padding: 4px;
