--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,13 @@
   width: 30vw;
   min-width: 350px;
   position: relative;
+  overflow: hidden;
+
+  transition: border .3s linear;
+}
+
+.App-GameShell-Correct {
+  border: 2px solid green;
 }
 
 .App-FreezeStateBtn {
