--- a/src/CorrectAnimation.css
+++ b/src/CorrectAnimation.css
@@ -11,3 +11,10 @@
 .App-header {
   transition: color .3s linear;
 }
+
+.App-Correct .IngameView-Queue-Border {
+  border-top: 1px solid green;
+}
+.IngameView-Queue-Border {
+  transition: border .3s linear;
+}
