--- a/src/App.css
+++ b/src/App.css
@@ -41,12 +41,18 @@
   font-size: 18px;
 }
 
-
-#canvas {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translate(0, -50%);
+.App-Input {
+  flex: 1;
+  margin-top: 24px;
+  color: white;
+  display: inline-block;
+  font-size: 36px;
+  width: 100%;
+  border: 1px solid #008080;
+  border-radius: 4px;
+  background-color: transparent;
+  text-align: center;
+  outline: none;
 }
 
 html, body, div, span, applet, object, iframe,
