--- a/src/LobbyView.css
+++ b/src/LobbyView.css
@@ -1,14 +1,14 @@
 .LobbyView-Container {
-  padding: 24px;
+  padding: 10%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 .LobbyView-Header {
   font-size: 36px;
-  width: 320px;
 }
 
 .LobbyView-Waiting {
