--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
   outline: none;
 }
 
-@keyframes shake {
+@keyframes shaker {
   0% { transform: translate(2px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
   20% { transform: translate(-3px, 0px) rotate(1deg); }
@@ -70,7 +70,7 @@
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 .App-Shaking {
-  animation-name: shake;
+  animation-name: shaker;
   animation-duration: 0.5s;
   transform-origin:50% 50%;
   animation-iteration-count: infinite;
